--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
@@ -40,6 +41,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/lodash": "^4.14.194",
+    "@types/luxon": "^3.3.0",
     "@types/node": "18.15.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
